syntax = "proto3";
package pb;

option go_package = ".;pb";

message Block {
    uint64 BlockIndex       = 1;
    bytes ParentHash        = 2;
    bytes RootHash          = 3;
    bytes TransactionHash   = 4;
    bytes StateHash         = 5;
    int64 Timestamp         = 6;

    repeated TransactionWithData    Transactions    = 7;
    repeated bytes            States                = 8;
}

message Transaction {
    uint32 TransactionType         = 1;
    
    bytes Account       = 2;
    uint64 Sequence     = 3;
    string Amount       = 4;
    int64 Gas          = 5;
    bytes Destination   = 6;
    bytes Payload       = 7;

    bytes PublicKey     = 8;
    bytes Signature     = 9;
}

message Receipt {
    uint64 BlockIndex        = 1;
    uint32 TransactionIndex  = 2;
    uint32 TransactionResult = 3;

    repeated bytes States   = 4;
}

message AccountState {
    uint32 StateType  = 1;
    uint64 BlockIndex = 2;

    bytes Account     = 3;
    uint64 Sequence   = 4;
    string Amount      = 5;
}

message CurrencyState {
    uint32 StateType    = 1;
    uint64 BlockIndex   = 2;

    bytes Account       = 3;
    uint64 Sequence     = 4;

	string Name         = 5;
	string Symbol       = 6; 
	uint32 Decimals     = 7;
	string TotalSupply  = 8;
}

message TransactionWithData {
    Transaction Transaction   = 1;
    Receipt Receipt           = 2;
    int64 Date                = 3;
}

message MessageKey {
    bytes MessageKey    = 1;

    bytes PublicKey     = 2;
    bytes Signature     = 3;
}